syntax = "proto3";

// 行先ボード通信API
service DestinationbardCommunicationAPI{

	// 登録スタッフ情報の取得API
	rpc GetStaffs (GetStaffsRequest) returns(GetStaffsReply) {}

	// スタッフ情報の登録
	rpc RegistStaff (RegistStaffRequest) returns(RegistStaffReply) {}

	// 行動一覧の取得
	rpc GetActions (GetActionsRequest) returns(GetActionsReply) {}

	// 行動一覧の更新
	rpc RegistActions (RegistActionsRequest) returns(RegistActionsReply) {}

	// 行動予定の登録
	rpc RegistActionPlan (RegistActionPlanRequest) returns(RegistActionPlanReply) {}

	// 現在の行動予定一覧表
	rpc GetActionPlans (GetActionPlansRequest) returns(GetActionPlansReply) {}

	// スタッフマスター
	rpc StaffMaster (StaffMasterRequest) returns(StaffMasterReply) {}

	// 行動マスター
	rpc ActionMaster (ActionMasterRequest) returns(ActionMasterReply) {}

	// 行先マスター
	rpc DestinationMaster (DestinationMasterRequest) returns(DestinationMasterReply) {}

}
message GetStaffsRequest {
	string IP = 1;
}
message GetStaffsReply {
	int32 ErrorCode = 1;
	repeated StaffMasterReply StaffInfoList = 2;
}
message RegistStaffRequest {
	string IP = 1;
	repeated StaffMasterRequest  StaffInfoList = 2;
}
message RegistStaffReply {
	int32 ErrorCode = 1;
}
message GetActionsRequest {
	string IP = 1;
}
message GetActionsReply {
	int32 ErrorCode = 1;
	repeated ActionMasterReply ActionList = 2;
	repeated DestinationMasterReply DestinationList = 3;
}
message RegistActionsRequest {
	string IP = 1;
	repeated ActionMasterRequest ActionMasterList = 2;
	repeated DestinationMasterRequest DestinationMasterList = 3;
}
message RegistActionsReply {
	int32 ErrorCode = 1;
}
message RegistActionPlanRequest {
	string IP = 1;
}
message RegistActionPlanReply {
	int32 ErrorCode = 1;
}
message GetActionPlansRequest {
	string StaffID = 1;
	string StaffName = 2;
	string ActionID = 3;
	string ActionName = 4;
	string DestinationID = 5;
	string DestinationName = 6;
	string FromTime = 7;
	string ToTime = 8;
	string Memo = 9;
}
message GetActionPlansReply {
	string StaffID = 1;
	string StaffName = 2;
	string ActionID = 3;
	string ActionName = 4;
	string DestinationID = 5;
	string DestinationName = 6;
	string FromTime = 7;
	string ToTime = 8;
	string Memo = 9;
}
message StaffMasterRequest {
	string StaffID = 1;
	int32 SortOrder = 2;
	string StaffName = 3;
	bool Display = 4;
	string CreateDate = 5;
	string CreateUser = 6;
}
message StaffMasterReply {
	string StaffID = 1;
	int32 SortOrder = 2;
	string StaffName = 3;
	bool Display = 4;
	string CreateDate = 5;
	string CreateUser = 6;
}
message ActionMasterRequest {
	string ActionID = 1;
	int32 SortOrder = 2;
	string ActionName = 3;
	string CreateDate = 4;
	string CreateUser = 5;
	string UpdateDate = 6;
	string UpdateUser = 7;
}
message ActionMasterReply {
	string ActionID = 1;
	int32 SortOrder = 2;
	string ActionName = 3;
	string CreateDate = 4;
	string CreateUser = 5;
	string UpdateDate = 6;
	string UpdateUser = 7;
}
message DestinationMasterRequest {
	string DestinationID = 1;
	int32 SortOrder = 2;
	string DestinationName = 3;
	string ActionID = 4;
	string CreateDate = 5;
	string CreateUser = 6;
	string UpdateDate = 7;
	string UpdateUser = 8;
}
message DestinationMasterReply {
	string DestinationID = 1;
	int32 SortOrder = 2;
	string DestinationName = 3;
	string ActionID = 4;
	string CreateDate = 5;
	string CreateUser = 6;
	string UpdateDate = 7;
	string UpdateUser = 8;
}
